# engunits

./: CMakeLists.txt  Doxyfile  LICENSE.md  README.md  engineering_units.kdev4
examples/: CMakeLists.txt  isa_atmosphere.cpp
gdb/engunits/: __init__.py  printers.py
include/engineering_units/: angle.hpp  io.hpp  quantity.hpp  si.hpp  time.hpp
include/engineering_units/detail/: constexpr_pow.hpp  contains.hpp  doxygen.hpp  fold_expressions.hpp  is_unique.hpp  merge.hpp  pow_ratio.hpp  string_literal.hpp  type_wrapper.hpp  void_t.hpp
include/engineering_units/imperial/: force.hpp  length.hpp  mass.hpp  pressure.hpp  velocity.hpp
include/engineering_units/si/: current.hpp  energy.hpp  force.hpp  length.hpp  mass.hpp  power.hpp  pressure.hpp  temperature.hpp  time.hpp
include/engineering_units/unit/: base_conversion.hpp  concepts.hpp  conversion.hpp  dimensionless.hpp  equality.hpp  helper_macros.hpp  io.hpp  mixed_unit.hpp  multiply.hpp  pow.hpp  predicates.hpp  simplify.hpp  traits.hpp
tests/: CMakeLists.txt  allunits.cpp  quantity.cpp
tests/detail/: constexpr_pow.cpp  contains.cpp
tests/unit/: base_conversion.cpp  conversion.cpp  equality.cpp  mixed_unit.cpp  multiply.cpp  symbol.cpp
